Fixed slideshow overflow

--- a/slideshow.css
+++ b/slideshow.css
@@ -22,6 +22,7 @@
 	height: 100%;
 	position: absolute;
 	display: none;
+	overflow: hidden;
 }
 
 .prev, .next {
@@ -50,22 +51,22 @@
 .caption-text {
 	background: rgba(0,0,0,0.4);
 	color: #f2f2f2;
-	font-size: 24px;
+	font-size: 18px;
 	position: absolute;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	bottom: 0px;
 	width: 100%;
-	text-align: center;
+	padding-left: 10px;
 }
 
 .dot {
 	position: relative;
 	left: 50%;
 	cursor: pointer;
-	transform: translateX(-45px);
-	height: 15px;
-	width: 15px;
+	transform: translateX(-35px);
+	height: 10px;
+	width: 10px;
 	margin: 0 2px;
 	background-color: #B99EC1;
 	border-radius: 50%;
